<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Theocratic Songs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About Theocratic Songs</string>

    <string name="title_pref_font_size">Font Size</string>
    <string name="summary_pref_font_size">Choose a default font size</string>

    <string name="title_pref_language">Language</string>
    <string name="summary_pref_language">Choose a default language</string>

    <string name="title_pref_sleep">Screen Sleep</string>
    <string name="summary_on_pref_sleep">Keep screen active while using app</string>
    <string name="summary_off_pref_sleep">Use phone defaults for screen</string>

    <string name="about_build_version">Build version</string>
    <string name="about_changelog_title">Change log</string>
    <string name="about_changelog_summary">See what\'s new and updated</string>

    <string name="about_email">Email developer</string>
    <string name="about_email_summary">Send any questions or bug reports</string>

    <string name="about_rate">Rate this app</string>
    <string name="about_rate_summary">Share your opinions about this app</string>

    <string name="about_share">Share</string>
    <string name="about_share_summary">Tell your friends</string>

    <string name="change_log_message" translatable="false">
        <b>1.7.6</b>\n
        - fixed typos\n
        - added songs 146 - 150 in English\n\n

        <b>1.7.5</b>\n
        - added 3 new songs in Spanish\n\n

        <b>1.7.4</b>\n
        - fixed song #127 typo in English\n\n

        <b>1.7.3</b>\n
        - added 3 new songs in English\n
        - maintenance cleanup\n
        - fixed song #54 typo in Spanish\n\n

        <b>1.7.2</b>\n
        - fixed song #130 chorus in English and Spanish\n
        - fixed email subject line\n\n

        <b>1.7.1</b>\n
        - new app name\n\n

        <b>1.7</b>\n
        - New app name!\n
        - updated edits to new songs\n\n

        <b>1.6.11</b>\n
        - added additional verse to song #136 in English and Spanish\n\n

        <b>1.6.10</b>\n
        - added songs #140-142 in Spanish\n
        - fixed typo song #73 in Spanish\n\n

        <b>1.6.9</b>\n
        - added songs #140-142 in English\n
        - minor adjustments to layout in smallest screen sizes\n\n

        <b>1.6.8</b>\n
        - added new song #139 in English and Spanish\n\n

        <b>1.6.7</b>\n
        - added 3 new songs in Spanish\n\n

        <b>1.6.6</b>\n
        - added 3 new songs in English\n\n

        <b>1.6.5</b>\n
        - fixed bug where songs don\'t display if system language is Spanish\n\n

        <b>1.6.4</b>\n
        - minor bug and translation fixes\n\n

        <b>1.6.3</b>\n
        - Song lyrics are now in Spanish. Go to Settings and click on Language to switch between English and Spanish.\n
        - Added new About section\n\n

        <b>02/02/2014</b>\n
        bug fixes\n
        - screen sleep now remembers settings after closing and reopening app\n\n

        <b>01/29/2014</b>\n
        bug fixes\n
        - special characters are now displayed correctly\n
        new stuff\n
        - updated navigation! To get back to the list of songs, simply tap the app icon in the top left corner, or tap on the back button at the bottom of your screen. Double tap the back button to exit the app.\n
        - set screen to not turn off while using the app, in settings menu\n
    </string>
</resources>
