<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_build_version"
        android:id="@+id/buildVersion"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_changelog_title"
        android:id="@+id/changeLog"
        android:onClick="onClickChangeLog"
        android:clickable="true"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_changelog_summary"
        android:id="@+id/changeLogSubhead"
        android:onClick="onClickChangeLog"
        android:clickable="true"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_email"
        android:id="@+id/emailDev"
        android:onClick="onClickEmail"
        android:clickable="true"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_email_summary"
        android:id="@+id/emailDevSubhead"
        android:onClick="onClickEmail"
        android:clickable="true"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_rate"
        android:id="@+id/rateApp"
        android:onClick="onClickRate"
        android:clickable="true"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Share your opinions about this app"
        android:id="@+id/rateAppSubhead"
        android:onClick="onClickRate"
        android:clickable="true"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_share"
        android:id="@+id/shareText"
        android:onClick="onClickShare"
        android:clickable="true"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_share_summary"
        android:id="@+id/shareSubhead"
        android:onClick="onClickShare"
        android:clickable="true"
        />

</LinearLayout>